[package]
name = "futures-concurrency-dynamic"
version = "0.2.1"
edition = "2021"
description = "A dynamic extension of the futures-concurrency"
license = "MIT or Apache-2.0"
repository = "https://github.com/drindr/futures-concurrency-dynamic"
authors = ["Drin <dreamchancn@qq.com>"]

[dependencies]
futures-concurrency = "7.6.3"
futures-core = "0.3.31"
futures-util = "0.3.31"
pin-project = "1.1.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
